updated name of app in packages list

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gum",
-  "subdomain": "salpy.gum",
+  "name": "streamtest",
+  "subdomain": "ca.salpy",
   "scripts": {
     "start": "index.js"
   },
